[gd_scene load_steps=7 format=3 uid="uid://2jds8a1duf7u"]

[ext_resource type="Texture2D" uid="uid://oijc0ryfd60f" path="res://assets/textures/bg.png" id="1_ddldl"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_xoc27"]
[ext_resource type="PackedScene" uid="uid://d3ax4ea5c2ocg" path="res://scenes/hud.tscn" id="2_80cyo"]
[ext_resource type="PackedScene" uid="uid://drj5e3oklxfcq" path="res://scenes/player.tscn" id="2_jwrjv"]
[ext_resource type="PackedScene" uid="uid://004tjv734xpy" path="res://scenes/enemy_spawner.tscn" id="4_155bo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0nqqo"]
size = Vector2(200, 720)

[node name="Game" type="Node2D"]
script = ExtResource("1_xoc27")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_80cyo")]

[node name="Background" type="TextureRect" parent="."]
z_index = -100
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_ddldl")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_jwrjv")]
position = Vector2(120, 364)

[node name="EnemySpawner" parent="." instance=ExtResource("4_155bo")]

[node name="Deathzone" type="Area2D" parent="."]
position = Vector2(-200, 0)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(0, 360)
shape = SubResource("RectangleShape2D_0nqqo")

[node name="EnemyContainer" type="Node2D" parent="."]

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
